import "ApiRequest.proto";

message ComposeUnitRequest{//从Unit碎片道具合成Unit
	optional ApiRequest api = 1;//接口基础数据
	optional int32 unitId = 2;//目标Unit的ID
}